# NextDay

./: .env.example  .gitignore  Procfile  docker-compose.yml  manage.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt
.github/workflows/: render-deploy.yml
backend/accounts/: forms.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/detection/: forms.py  urls.py  views.py
backend/detection/services/: __init__.py  color_extractor.py  yolo_detector.py
backend/wardrobe/: context_processors.py  forms.py  middleware.py  mock_data.py  sample_import.py  urls.py  user_preferences.py  views.py
backend/wardrobe/services/: __init__.py  color_utils.py  destination_profiles.py  outfit_engine.py  outfit_scorer.py  processor.py  weather.py
config/: settings.py  urls.py
database/: admin.py  apps.py  garment_catalog.py  models.py  signals.py
database/migrations/: 0001_initial.py  0002_aisettings_destination_and_more.py  0003_destination_weather_style_and_garment_updates.py
database/scripts/: init_postgresql.sql  setup_postgresql.ps1
docs/: SYSTEM.md
frontend/app/: page.tsx
frontend/lib/: api.ts
frontend/static/css/: auth.css  fonts.css  style.css  (+1 more)
frontend/templates/: base.html
mock_samples/wardrobe/: default_manifest.json
outfit/: admin.py  constants.py  models.py  urls.py  views.py
outfit/migrations/: 0001_initial.py
outfit/ml/: pipeline.py
outfit/services/: matrix_a.py  recommendation.py  weather.py
scripts/: render_start.sh  reset_outfit_db.py
your_application/: __init__.py  wsgi.py
(+43 files in other folders)
