[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nextday-render"
version = "0.1.0"
description = "Render WSGI shim package for NextDay Django app"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["your_application*"]
